--- a/asset/style.css
+++ b/asset/style.css
@@ -11,7 +11,8 @@ body {
 	color: white !important;
 	font-size: large;
 	background-color: rgba(0, 0, 0, 0.904) !important;
-    font-family: Arial, sans-serif;
+	font-family: Arial, sans-serif;
+	font-size: 12pt;
 }
 
 video {
@@ -60,7 +61,7 @@ video {
 .form-center .input-url {
 	width: 35em;
 	padding: 5px 5px;
-	border-radius: 5px;
+	border-radius: 8px;
 }
 
 .form-center .button-url{
@@ -94,7 +95,7 @@ video {
 }
 
 .pop-text {
-	width: 20em;
+	width: 25em;
 	background-color: white;
 	padding: 1em;
 	border-radius: 1em;
@@ -103,6 +104,6 @@ video {
 @media (max-width: 768px) { 
 	.form-center { height: 10em; min-width: 10em; text-align: center; }
 	.form-center .button-url { padding: 5px 20px; margin-top: 10px; border-radius: 5px; color:rgba(0, 0, 0, 0.644); }
-	.form-center .input-url { width: 70%; padding: 5px 1px; border-radius: 5px; }
+	.form-center .input-url { width: 80%; padding: 5px 1px; border-radius: 5px; }
 	.form-center .label-url { font-size: 9pt; left: 10px; text-align: left; color: rgba(255, 255, 255, 0.541); position: relative; margin-top: 5px; }
  }
